--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.18.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.6"
+    "react-palette": "^0.1.3",
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
