--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "path": "^0.12.7",
+    "fast-average-color": "^4.3.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-palette": "^0.1.3",
