--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "operator-linebreak": 0,
     "indent": ["error", 2],
     "linebreak-style": 0,
+    "implicit-arrow-linebreak": 0,
     "import/extensions": 0,
     "no-multiple-empty-lines": 0,
     "no-console": 1,
